--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Today's News</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="bg-light">
@@ -51,7 +52,7 @@
                     <div>
                         <ul class="navbar-nav">
                           <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" onclick="loadCat('08') aria-current="page" href="#">Home</a>
                           </li>
       
                           <div id="categoryName" class="navbar-nav">
@@ -65,36 +66,21 @@
         </div>
       </header>
     <section>
-      <div id="displayCat" class="container">
-        <div class="card mb-3">
-          <div class="row g-0">
-            <div class="col-md-4">
-              <img src="..." class="img-fluid rounded-start" alt="...">
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <div class="row gy-2 gx-3 align-items-center">
-                  <div class="col-auto">
-                    <div class="row g-0">
-                      <div class="col-md-4">
-                        <img src="..." class="img-fluid rounded-start" alt="...">
-                      </div>
-                      <div class="col-md-8">
-                        <p class="card-text"><small class="text-muted">Author:  Name</small></p>
-                        <p class="card-text"><small class="text-muted">Author: published_date</small></p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-auto">
-                    <p class="card-text"><small class="text-muted">View:</small></p>
-                  </div>
-                </div>
-              </div>
-            </div>
+
+      <!-- Loader Starts -->
+        <div id="loader" class="d-none loader_section d-flex justify-content-center aligm-items-center">
+          <div class="spinner-border" role="status">
+            <span class="visually-hidden">Loading...</span>
           </div>
         </div>
+      <!-- Loader End -->
+
+      <div id="displayCat" class="container">
+        
+      </div>
+
+      <div id="post-not-found" class="d-none mt-5 container">
+        <div class="p-3 mb-2 bg-warning text-dark">No posts Found</div>
       </div>
     </section>
     <script src="js/post.js"></script>
