--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a class="nav-link active text-primary" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">News</a>
+                    <a class="nav-link" onclick="loadCat('08')">News</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Blog</a>
@@ -52,7 +52,7 @@
                     <div>
                         <ul class="navbar-nav">
                           <li class="nav-item">
-                            <a class="nav-link active" onclick="loadCat('08') aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" onclick="loadCat('08')" aria-current="page" href="#">Home</a>
                           </li>
       
                           <div id="categoryName" class="navbar-nav">
