--- a/blog.html
+++ b/blog.html
@@ -8,13 +8,13 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="bg-light">
+    <header>
         <nav class="navbar navbar-expand-lg py-3">
             <div class="container">
               <button class=" btn btn-primary text-white" href="/index.html">Today's News</button>
 
               <div>
-                <button class="btn btn-primary d-lg-none my-2 m-sm-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive">
+                <button class="btn offcanvas-btn d-lg-none my-2 m-sm-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive">
                   Categories
                 </button>
   
@@ -44,7 +44,7 @@
             
             <div class="offcanvas-lg offcanvas-end" tabindex="-1" id="offcanvasResponsive" aria-labelledby="offcanvasResponsiveLabel">
                 <div class="offcanvas-header">
-                  <h5 class="offcanvas-title" id="offcanvasResponsiveLabel"></h5>
+                  <h5 class="offcanvas-title" id="offcanvasResponsiveLabel">All Categories</h5>
                   <button type="button" class="btn-close" data-bs-dismiss="offcanvas" data-bs-target="#offcanvasResponsive" aria-label="Close"></button>
                 </div>
                 <div class="offcanvas-body">
