--- a/blog.html
+++ b/blog.html
@@ -98,12 +98,23 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingTwo">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              Accordion Item #2
+              What are the difference between regular function and arrow function?
             </button>
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-              <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+              <strong>Regular vs Arrow Functions:</strong>
+              <br><br>
+              <b><i>1. this</i> binding</b>
+              <ul>
+                <li>Regular functions have their own dynamic this binding, while arrow functions do not have their own this.</li>
+                <li>The value of this inside an arrow function remains the same throughout the lifecycle of the function and is always bound to the value of this in the closest non-arrow parent function.</li>
+              </ul>
+              <b>2. Arguments Object.</b>
+              <ul>
+                <li>In regular JavaScript functions, arguments keywords can be used to access the passed arguments when the function is invoked.</li>
+                <li>But, arrow functions do not have their own arguments and it uses the arguments from the outer function.</li>
+              </ul>
             </div>
           </div>
         </div>
