--- a/blog.html
+++ b/blog.html
@@ -28,9 +28,6 @@
                   <a class="nav-link active text-primary" aria-current="page" href="/index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" onclick="loadCat('08')">News</a>
-                </li>
-                <li class="nav-item">
                   <a class="nav-link" href="/blog.html">Blog</a>
                 </li>
               </ul>
@@ -51,9 +48,6 @@
                 <nav class="navbar navbar-expand-lg pt-2">
                   <div>
                       <ul class="navbar-nav">
-                        <li class="nav-item">
-                          <a class="nav-link active" onclick="loadCat('08')" aria-current="page" href="#">Home</a>
-                        </li>
     
                         <div id="categoryName" class="navbar-nav">
     
@@ -121,12 +115,13 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingThree">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              Accordion Item #3
+              Why should we use template string?
             </button>
           </h2>
           <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-              <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+              <strong>Template strings are a powerful feature of modern JavaScript released in ES6.</strong> It lets us insert/interpolate variables and expressions into strings without needing to concatenate like in older versions of JavaScript. It allows us to create strings that are complex and contain dynamic elements.Another great thing that comes with template strings are tags. Tags are functions that take a string and the decomposed parts of the string as…
+              <p>The syntax for creating template strings is by using backticks to delimit them.</p>
             </div>
           </div>
         </div>
