--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
     </section>
     <script src="js/cat.js"></script>
     <script src="js/post.js"></script>
+    <script>loadCat('08');</script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
