--- a/blog.html
+++ b/blog.html
@@ -75,7 +75,10 @@
       <div id="post-not-found" class="d-none mt-5 container">
         <div class="p-3 mb-2 bg-warning text-dark">No posts Found</div>
       </div>
+    </section>
+    <section id="page-content">
       <div class="container accordion my-5" id="accordionExample">
+        <h3 class="text-center mb-5">Q&A</h3>
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingOne">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
