Today's News Done

--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
             </div>
         </div>
     </header>
+    <section id="page-content">
+    </section>
     <section>
-
       <!-- Loader Starts -->
         <div id="loader" class="d-none loader_section d-flex justify-content-center aligm-items-center">
           <div class="spinner-border" role="status">
